--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,6 +1,6 @@
-.login {
+.register{
     width: 315px;
-    height:520px;
+    height:540px;
     overflow: hidden;
     margin: auto;
     margin: 20 0 0 450px;
