--- a/src/Components/Register/Register.css
+++ b/src/Components/Register/Register.css
@@ -1,4 +1,4 @@
-/* .register{
+.register{
     width: 315px;
     height:780px;
     overflow: hidden;
@@ -8,7 +8,7 @@
     background: #000000;
     border-radius: 80px;
 
-} */
+} 
 
 h2 {
     text-align: center;
